# npdoc2md

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  LICENSE  Npdoc2md.md  README.md  code2npdoc.py  generateExamples.bat  generateExamples.sh  npdoc2md.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: Code2npdoc.md  Npdoc2md.md  README.md  __init__.md  __main__.md  _log.md  _version.md  utils.md
example/: Npdoc2md.md  README.md
examples/: README.md
scripts/: generateExamples.bat  generateExamples.sh  publishPyPi.bat  publishPyPi.sh
src/npdoc2md/: __init__.py  __main__.py  _log.py  _version.py  npdoc2md.py  utils.py
tests/: test_cli.py  test_npdoc2md.py  test_parsing.py  test_utils.py
tests/expected_output/: utils.md
